# aoc23

./: README.md  pyproject.toml
aoc23/: __main__.py  d01.py  d02.py  d03.py  d04.py
tests/: test_d01.py  test_d02.py  test_d03.py  test_d04.py
