[tool.poetry]
name = "aoc23"
version = "0.1.0"
description = "Solutions for Advent of Code 2023"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
regex = "^2023.10.3"

[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
ruff = "^0.1.6"
mypy = "^1.7.1"

[tool.poetry.scripts]
aoc23 = "aoc23.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
